--- a/index.html
+++ b/index.html
@@ -3,30 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Million Pixel Grid</title>
+    <title>Million Pixel Grid</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/phosphor-icons/1.4.2/css/phosphor.min.css">
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
-  }
-}
-</script>
-<style>
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(10px) translateX(-50%); }
-    to { opacity: 1; transform: translateY(0) translateX(-50%); }
-  }
-  .animate-fade-in {
-    /* The transform property is managed by inline styles, so we only apply the animation name and duration */
-    animation: fadeIn 0.2s ease-out forwards;
-  }
-</style>
-</head>
-  <body class="bg-gray-900 text-white antialiased">
+    <script src="https://checkout.flutterwave.com/v3.js"></script>
+  </head>
+  <body class="bg-black text-white antialiased">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
